--- a/pizza-shop/package.json
+++ b/pizza-shop/package.json
@@ -7,6 +7,7 @@
     "react": "^19.0.0",
     "react-content-loader": "^7.0.2",
     "react-dom": "^19.0.0",
+    "react-paginate": "^8.3.0",
     "react-router-dom": "^6.28.2",
     "react-scripts": "5.0.1",
     "sass": "^1.83.4"
