refactor: start add ts

--- a/pizza-shop/package.json
+++ b/pizza-shop/package.json
@@ -4,6 +4,10 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.1",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.13.5",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
     "lodash.debounce": "^4.0.8",
@@ -15,7 +19,8 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.28.2",
     "react-scripts": "5.0.1",
-    "sass": "^1.83.4"
+    "sass": "^1.83.4",
+    "typescript": "^5.7.3"
   },
   "scripts": {
     "start": "react-scripts start",
