--- a/pizza-shop/package.json
+++ b/pizza-shop/package.json
@@ -19,8 +19,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.28.2",
     "react-scripts": "5.0.1",
-    "sass": "^1.83.4",
-    "typescript": "^5.7.3"
+    "sass": "^1.83.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -47,6 +46,8 @@
     ]
   },
   "devDependencies": {
-    "prettier": "3.4.2"
+    "@types/lodash.debounce": "^4.0.9",
+    "prettier": "3.4.2",
+    "typescript": "^4.9.5"
   }
 }
